Add email attribute to LDAP config

--- a/lib/generators/devise_ldap_authenticatable/templates/ldap.yml
+++ b/lib/generators/devise_ldap_authenticatable/templates/ldap.yml
@@ -31,6 +31,7 @@ development:
   host: localhost
   port: 389
   attribute: cn
+  email_attribute: mail
   base: ou=people,dc=test,dc=com
   admin_user: cn=admin,dc=test,dc=com
   admin_password: admin_password
@@ -41,6 +42,7 @@ test:
   host: localhost
   port: 3389
   attribute: cn
+  email_attribute: mail
   base: ou=people,dc=test,dc=com
   admin_user: cn=admin,dc=test,dc=com
   admin_password: admin_password
@@ -51,6 +53,7 @@ production:
   host: localhost
   port: 636
   attribute: cn
+  email_attribute: mail
   base: ou=people,dc=test,dc=com
   admin_user: cn=admin,dc=test,dc=com
   admin_password: admin_password
